--- a/platform-jump.css
+++ b/platform-jump.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background: linear-gradient(to top, deepskyblue, lightskyblue) fixed;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.89), black) fixed;
 }
 
 #board {
